# epfl_lockers

./: Cargo.toml  Dockerfile  docker-compose.yml
.github/workflows/: docker-publish.yml
src/: main.rs  model.rs  ntfy.rs
